--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
+      <h1>Ambystoma mexicanum<br>LEARN TO BE CREATIVE.</h1>
       <p>ウーパールーパーとはメキシコ原産の両生類のサンショウウオの仲間です。
         <br>アホロートルとも呼ばれています。とてもかわいい。</p>
       <div class="btn-wrapper">
