--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>Ambystoma mexicanum<br>(Shaw & Nodder, 1789)</h1>
+      <h1 class="f-monoton">Ambystoma mexicanum<br>(Shaw & Nodder, 1789)</h1>
       <p>ウーパールーパーとはメキシコ原産の両生類のサンショウウオの仲間です。
         <br>アホロートルとも呼ばれています。とてもかわいい。</p>
       <div class="btn-wrapper">
