--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -26,7 +27,8 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1 class="f-monoton">Ambystoma mexicanum<br>(Shaw & Nodder, 1789)</h1>
+      <h1 class="f-monoton">Ambystoma mexicanum</h1>
+      <h2 class="f-archivoblack">(Shaw & Nodder, 1789)</h2>
       <p>ウーパールーパーとはメキシコ原産の両生類のサンショウウオの仲間です。
         <br>アホロートルとも呼ばれています。とてもかわいい。</p>
       <div class="btn-wrapper">
