--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="top-wrapper">
     <div class="container">
       <h1 class="f-monoton">Ambystoma mexicanum</h1>
-      <h2 class="f-quicksand">Shaw & Nodder, 1789</h2>
+      <h2 class="f-poppins">Shaw & Nodder, 1789</h2>
       <p>ウーパールーパーとはメキシコ原産の両生類のサンショウウオの仲間です。
         <br>アホロートルとも呼ばれています。とてもかわいい。</p>
       <div class="btn-wrapper">
