--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       <p>ウーパールーパーとはメキシコ原産の両生類のサンショウウオの仲間です。
         <br>アホロートルとも呼ばれています。とてもかわいい。</p>
       <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
+        <a href="#" class="btn signup">新規登録（無料）</a>
        <!-- <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
         <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a> !-->
       </div>
