--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="lesson-wrapper">
     <div class="container">
       <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
+        <h2>About Ambystoma mexicanum</h2>
       </div>
       <div class="lessons">
         <div class="lesson">
